fix: добавить text-overflow, overflow, white-space для текстовых элементов profile

--- a/blocks/profile/__edit-btn/profile__edit-btn.css
+++ b/blocks/profile/__edit-btn/profile__edit-btn.css
@@ -2,21 +2,20 @@
   width: 24px;
   height: 24px;
   background-image: url(../../../images/edit-button.svg);
+  margin-left: 18px;
 }
 
 @media screen and (max-width: 1000px) {
   .profile__edit-btn {
     position: absolute;
-    bottom: 42px;
-    right: 30px;
+    top: 10px;
+    right: 19px;
   }
 }
 
 @media screen and (max-width: 650px) {
   .profile__edit-btn {
     width: 18px;
-    height: 18px;
-    bottom: 32px;
-    right: 19px;
+    top: 5px;
   }
 }
