--- a/blocks/profile/__subtitle/profile__subtitle.css
+++ b/blocks/profile/__subtitle/profile__subtitle.css
@@ -1,5 +1,5 @@
 .profile__subtitle {
-  max-width: 336px;
+  max-width: 488px;
   font-family: 'Inter', 'Arial', sans-serif;
   font-style: normal;
   font-weight: normal;
@@ -7,17 +7,22 @@
   line-height: 22px;
   color: #fff;
   margin: 4px 0 0;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
+  flex-basis: 100%;
 }
 
 @media screen and (max-width: 1000px) {
   .profile__subtitle {
-    margin: 10px auto 0;
+    margin: 6px auto 0;
+    text-align: center;
   }
 }
 
 @media screen and (max-width: 650px) {
   .profile__subtitle {
-    max-width: 282px;
+
     font-size: 14px;
     line-height: 17px;
   }
