--- a/blocks/profile/__title/profile__title.css
+++ b/blocks/profile/__title/profile__title.css
@@ -1,5 +1,5 @@
 .profile__title {
-  max-width: 294px;
+  max-width: 488px;
   font-family: 'Inter', 'Arial', sans-serif;
   font-style: normal;
   font-weight: 500;
@@ -7,11 +7,15 @@
   line-height: 48px;
   color: #fff;
   margin: 0;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
+  text-align: center;
 }
 
 @media screen and (max-width: 1000px) {
   .profile__title {
-    margin: 0 auto;
+    margin: 0 45px;
   }
 }
 
